# fraction

./: .gitignore  Anchor.toml  FINAL_SUCCESS_REPORT.md  FLOW.md  README.md  SECURITY.md  TEST_SUMMARY.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/: example.ts  generate-client.ts
idls/: dynamic_bonding_curve.json
programs/fraction/: Cargo.toml
programs/fraction/src/: lib.rs
programs/fraction/src/errors/: fraction_error.rs  mod.rs
programs/fraction/src/instructions/: claim_and_distribute.rs  initialize_fraction.rs  mod.rs  update_fraction.rs  withdraw_share.rs
programs/fraction/src/states/: fraction_config.rs  mod.rs  participant.rs  participant_balance.rs
programs/splits/: Cargo.toml
programs/splits/src/: lib.rs
programs/splits/src/errors/: mod.rs  splits_error.rs
programs/splits/src/instructions/: claim_and_distribute.rs  deposit_tokens.rs  initialize_splitter.rs  mod.rs  update_splitter.rs  withdraw_share.rs
programs/splits/src/states/: mod.rs  participant.rs  participant_balance.rs  splitter_config.rs
sdk/: README.md  index.ts  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
sdk/instructions/: claim.ts  create.ts  index.ts  update.ts
sdk/shared/: client.ts  idl.json  idl.ts  index.ts
sdk/state/: index.ts
sdk/test/: index.test.ts  tsconfig.json
sdk/types/: index.ts
tests/: fraction.ts  fraction_new.ts  splits.ts
