[package]
name = "fraction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fraction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "lazy-account"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
const-crypto = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
solana-security-txt = "1.1.1"
